# agent_feed

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile
.github/workflows/: ci.yml  cleanup-agent-feed-p2p-aws.yml  cleanup-agent-reel-p2p-aws.yml  deploy-agent-feed-p2p-aws.yml  deploy-agent-reel-p2p-aws.yml  deploy-pages.yml  inspect-agent-feed-p2p-aws.yml  inspect-agent-reel-p2p-aws.yml
crates/agent_feed/: Cargo.toml
crates/agent_feed/src/: lib.rs
crates/agent_feed_adapters/: Cargo.toml
crates/agent_feed_adapters/src/: lib.rs
crates/agent_feed_auth/: Cargo.toml
crates/agent_feed_auth_github/: Cargo.toml
crates/agent_feed_auth_github/src/: lib.rs
crates/agent_feed_browser/: Cargo.toml
crates/agent_feed_browser/src/: lib.rs
crates/agent_feed_cli/: Cargo.toml
crates/agent_feed_cli/src/: default_config.toml  main.rs
crates/agent_feed_core/: Cargo.toml
crates/agent_feed_core/src/: lib.rs
crates/agent_feed_deploy/: Cargo.toml
crates/agent_feed_deploy/src/: lib.rs
crates/agent_feed_directory/: Cargo.toml
crates/agent_feed_directory/src/: lib.rs
crates/agent_feed_edge/: Cargo.toml
crates/agent_feed_edge/src/: lib.rs
crates/agent_feed_filter/: Cargo.toml
crates/agent_feed_filter/src/: lib.rs
crates/agent_feed_highlight/: Cargo.toml
crates/agent_feed_highlight/src/: lib.rs
crates/agent_feed_identity/: Cargo.toml
crates/agent_feed_identity/src/: lib.rs
crates/agent_feed_identity_github/: Cargo.toml
crates/agent_feed_identity_github/src/: lib.rs
crates/agent_feed_ingest/: Cargo.toml
crates/agent_feed_ingest/src/: lib.rs
crates/agent_feed_install/: Cargo.toml
crates/agent_feed_install/src/: lib.rs
crates/agent_feed_metrics/: Cargo.toml
crates/agent_feed_metrics/src/: lib.rs
crates/agent_feed_p2p/: Cargo.toml
crates/agent_feed_p2p/deploy/: README.md  agent-feed-p2p-edge.service  native-peer.toml.example
crates/agent_feed_p2p/deploy/terraform/aws/: main.tf  outputs.tf  variables.tf  versions.tf
crates/agent_feed_p2p/deploy/terraform/aws/templates/: Caddyfile.tftpl  agent-feed-edge.service.tftpl  browser-config.json.tftpl  edge.env.tftpl  edge.toml.tftpl  user-data.sh.tftpl
crates/agent_feed_p2p/src/: lib.rs
crates/agent_feed_p2p_browser/: Cargo.toml
crates/agent_feed_p2p_browser/src/: lib.rs
crates/agent_feed_p2p_proto/: Cargo.toml
crates/agent_feed_p2p_proto/src/: lib.rs
crates/agent_feed_redaction/: Cargo.toml
crates/agent_feed_redaction/src/: lib.rs
crates/agent_feed_reel/: Cargo.toml
crates/agent_feed_reel/src/: lib.rs
crates/agent_feed_security/: Cargo.toml
crates/agent_feed_security/src/: lib.rs
crates/agent_feed_server/: Cargo.toml
crates/agent_feed_server/src/: lib.rs
crates/agent_feed_social/: Cargo.toml
crates/agent_feed_social/src/: lib.rs
crates/agent_feed_store/: Cargo.toml
crates/agent_feed_store/src/: lib.rs
crates/agent_feed_story/: Cargo.toml
crates/agent_feed_story/src/: lib.rs
crates/agent_feed_summarize/: Cargo.toml
crates/agent_feed_summarize/src/: lib.rs
crates/agent_feed_testkit/: Cargo.toml
crates/agent_feed_testkit/src/: lib.rs
crates/agent_feed_ui/: Cargo.toml
crates/agent_feed_ui/src/: index.html  lib.rs  reel.css  reel.ts
crates/agent_feed_views/: Cargo.toml
crates/agent_feed_views/src/: lib.rs
crates/agent_reel/: Cargo.toml
crates/agent_reel/src/: lib.rs
crates/agent_reel_adapters/: Cargo.toml
crates/agent_reel_adapters/src/: lib.rs
crates/agent_reel_auth/: Cargo.toml
crates/agent_reel_auth/src/: lib.rs
crates/agent_reel_auth_github/: Cargo.toml
crates/agent_reel_auth_github/src/: lib.rs
crates/agent_reel_browser/: Cargo.toml
crates/agent_reel_cli/: Cargo.toml
crates/agent_reel_cli/src/: main.rs
crates/agent_reel_core/: Cargo.toml
crates/agent_reel_deploy/: Cargo.toml
crates/agent_reel_deploy/src/: lib.rs
crates/agent_reel_directory/: Cargo.toml
crates/agent_reel_directory/src/: lib.rs
crates/agent_reel_edge/: Cargo.toml
crates/agent_reel_edge/src/: lib.rs
crates/agent_reel_filter/: Cargo.toml
crates/agent_reel_filter/src/: lib.rs
crates/agent_reel_highlight/: Cargo.toml
crates/agent_reel_highlight/src/: lib.rs
crates/agent_reel_identity/: Cargo.toml
crates/agent_reel_identity/src/: lib.rs
crates/agent_reel_identity_github/: Cargo.toml
crates/agent_reel_identity_github/src/: lib.rs
crates/agent_reel_ingest/: Cargo.toml
crates/agent_reel_ingest/src/: lib.rs
crates/agent_reel_install/: Cargo.toml
crates/agent_reel_install/src/: lib.rs
crates/agent_reel_metrics/: Cargo.toml
crates/agent_reel_p2p/: Cargo.toml
crates/agent_reel_p2p/deploy/: README.md  agent-reel-p2p-edge.service  native-peer.toml.example
crates/agent_reel_p2p/src/: lib.rs
crates/agent_reel_p2p_browser/: Cargo.toml
crates/agent_reel_p2p_browser/src/: lib.rs
crates/agent_reel_p2p_proto/: Cargo.toml
crates/agent_reel_p2p_proto/src/: lib.rs
crates/agent_reel_redaction/: Cargo.toml
crates/agent_reel_redaction/src/: lib.rs
crates/agent_reel_reel/: Cargo.toml
crates/agent_reel_reel/src/: lib.rs
crates/agent_reel_security/: Cargo.toml
crates/agent_reel_server/: Cargo.toml
crates/agent_reel_server/src/: lib.rs
crates/agent_reel_social/: Cargo.toml
crates/agent_reel_social/src/: lib.rs
crates/agent_reel_store/: Cargo.toml
crates/agent_reel_store/src/: lib.rs
crates/agent_reel_story/: Cargo.toml
crates/agent_reel_story/src/: lib.rs
crates/agent_reel_summarize/: Cargo.toml
crates/agent_reel_summarize/src/: lib.rs
crates/agent_reel_testkit/: Cargo.toml
crates/agent_reel_testkit/src/: lib.rs
crates/agent_reel_ui/: Cargo.toml
crates/agent_reel_ui/src/: index.html  lib.rs  reel.css  reel.ts
crates/agent_reel_views/: Cargo.toml
crates/agent_reel_views/src/: lib.rs
tests/fixtures/claude/: hooks-permission-denied.json  hooks-pre-tool-use.json  hooks-subagent.json  stream-json-basic.jsonl
tests/fixtures/codex/: app-server-turn.jsonl  exec-json-basic.jsonl  exec-json-tool-failure.jsonl
xtask/: Cargo.toml
xtask/src/: main.rs
(+14 files in other folders)
