[workspace]
resolver = "3"
members = [
    "crates/agent_feed",
    "crates/agent_feed_adapters",
    "crates/agent_feed_auth",
    "crates/agent_feed_auth_github",
    "crates/agent_feed_browser",
    "crates/agent_feed_cli",
    "crates/agent_feed_core",
    "crates/agent_feed_deploy",
    "crates/agent_feed_edge",
    "crates/agent_feed_filter",
    "crates/agent_feed_highlight",
    "crates/agent_feed_ingest",
    "crates/agent_feed_install",
    "crates/agent_feed_directory",
    "crates/agent_feed_identity",
    "crates/agent_feed_identity_github",
    "crates/agent_feed_metrics",
    "crates/agent_feed_p2p",
    "crates/agent_feed_p2p_browser",
    "crates/agent_feed_p2p_proto",
    "crates/agent_feed_redaction",
    "crates/agent_feed_reel",
    "crates/agent_feed_security",
    "crates/agent_feed_server",
    "crates/agent_feed_social",
    "crates/agent_feed_store",
    "crates/agent_feed_story",
    "crates/agent_feed_summarize",
    "crates/agent_feed_testkit",
    "crates/agent_feed_ui",
    "crates/agent_feed_views",
    "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aberration-technology/agent_feed"
homepage = "https://aberration.technology/"
readme = "README.md"
description = "projection-safe feed for local coding-agent activity"
rust-version = "1.95"

[workspace.dependencies]
agent_feed = { path = "crates/agent_feed", version = "0.1.14" }
agent_feed_adapters = { path = "crates/agent_feed_adapters", version = "0.1.14" }
agent_feed_auth = { path = "crates/agent_feed_auth", version = "0.1.14" }
agent_feed_auth_github = { path = "crates/agent_feed_auth_github", version = "0.1.14" }
agent_feed_browser = { path = "crates/agent_feed_browser", version = "0.1.14" }
agent_feed_core = { path = "crates/agent_feed_core", version = "0.1.14" }
agent_feed_deploy = { path = "crates/agent_feed_deploy", version = "0.1.14" }
agent_feed_edge = { path = "crates/agent_feed_edge", version = "0.1.14" }
agent_feed_filter = { path = "crates/agent_feed_filter", version = "0.1.14" }
agent_feed_highlight = { path = "crates/agent_feed_highlight", version = "0.1.14" }
agent_feed_ingest = { path = "crates/agent_feed_ingest", version = "0.1.14" }
agent_feed_install = { path = "crates/agent_feed_install", version = "0.1.14" }
agent_feed_directory = { path = "crates/agent_feed_directory", version = "0.1.14" }
agent_feed_identity = { path = "crates/agent_feed_identity", version = "0.1.14" }
agent_feed_identity_github = { path = "crates/agent_feed_identity_github", version = "0.1.14" }
agent_feed_metrics = { path = "crates/agent_feed_metrics", version = "0.1.14" }
agent_feed_p2p = { path = "crates/agent_feed_p2p", version = "0.1.14" }
agent_feed_p2p_browser = { path = "crates/agent_feed_p2p_browser", version = "0.1.14" }
agent_feed_p2p_proto = { path = "crates/agent_feed_p2p_proto", version = "0.1.14" }
agent_feed_redaction = { path = "crates/agent_feed_redaction", version = "0.1.14" }
agent_feed_reel = { path = "crates/agent_feed_reel", version = "0.1.14" }
agent_feed_security = { path = "crates/agent_feed_security", version = "0.1.14" }
agent_feed_server = { path = "crates/agent_feed_server", version = "0.1.14" }
agent_feed_social = { path = "crates/agent_feed_social", version = "0.1.14" }
agent_feed_store = { path = "crates/agent_feed_store", version = "0.1.14" }
agent_feed_story = { path = "crates/agent_feed_story", version = "0.1.14" }
agent_feed_summarize = { path = "crates/agent_feed_summarize", version = "0.1.14" }
agent_feed_testkit = { path = "crates/agent_feed_testkit", version = "0.1.14" }
agent_feed_ui = { path = "crates/agent_feed_ui", version = "0.1.14" }
agent_feed_views = { path = "crates/agent_feed_views", version = "0.1.14" }

axum = "0.8.4"
clap = "4.5.53"
http = "1.3.1"
hmac = "0.12.1"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = "0.3.44"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tower-http = "0.6.7"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
