[package]
name = "agent_feed_cli"
version = "0.1.8"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "agent-feed"
path = "src/main.rs"

[dependencies]
agent_feed_adapters = { workspace = true }
agent_feed_auth_github = { workspace = true }
agent_feed_core = { workspace = true }
agent_feed_directory = { workspace = true }
agent_feed_edge = { workspace = true }
agent_feed_highlight = { workspace = true }
agent_feed_ingest = { workspace = true }
agent_feed_install = { workspace = true }
agent_feed_p2p_proto = { workspace = true }
agent_feed_redaction = { workspace = true }
agent_feed_security = { workspace = true }
agent_feed_server = { workspace = true }
agent_feed_story = { workspace = true }
agent_feed_summarize = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[lints]
workspace = true
