[package]
name = "agent_feed_filter"
version = "0.1.19"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
