[package]
name = "agent_feed_p2p"
version = "0.1.7"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_directory = { workspace = true }
agent_feed_identity = { workspace = true }
agent_feed_p2p_proto = { workspace = true }
agent_feed_summarize = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
agent_feed_core = { workspace = true }
agent_feed_story = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
