[package]
name = "agent_feed_p2p_browser"
version = "0.1.24"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_auth_github = { workspace = true }
agent_feed_core = { workspace = true }
agent_feed_directory = { workspace = true }
agent_feed_p2p_proto = { workspace = true }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["formatting", "serde"] }

[dev-dependencies]
agent_feed_identity = { workspace = true }
agent_feed_story = { workspace = true }

[lints]
workspace = true
