[package]
name = "agent_feed_redaction"
version = "0.1.4"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_core = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
