[package]
name = "agent_feed_reel"
version = "0.1.22"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde", "serde-well-known"] }

[lints]
workspace = true
