[package]
name = "agent_feed_server"
version = "0.1.4"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_adapters = { workspace = true }
agent_feed_core = { workspace = true }
agent_feed_highlight = { workspace = true }
agent_feed_identity = { workspace = true }
agent_feed_ingest = { workspace = true }
agent_feed_metrics = { workspace = true }
agent_feed_redaction = { workspace = true }
agent_feed_reel = { workspace = true }
agent_feed_security = { workspace = true }
agent_feed_store = { workspace = true }
agent_feed_story = { workspace = true }
agent_feed_ui = { workspace = true }
agent_feed_views = { workspace = true }
axum = { workspace = true, features = ["json", "tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }

[lints]
workspace = true
