[package]
name = "agent_feed_social"
version = "0.1.16"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_p2p_proto = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
