[package]
name = "agent_feed_story"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_core = { workspace = true }
agent_feed_highlight = { workspace = true }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde", "formatting"] }

[lints]
workspace = true
