[package]
name = "agent_feed_summarize"
version = "0.1.18"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_core = { workspace = true }
agent_feed_story = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
