[package]
name = "agent_feed_testkit"
version = "0.1.15"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent_feed_core = { workspace = true }
agent_feed_highlight = { workspace = true }
agent_feed_ingest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
