[package]
name = "agent_reel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
agent_reel_core = { workspace = true }
agent_reel_filter = { workspace = true }
agent_reel_highlight = { workspace = true }
agent_reel_ingest = { workspace = true }
agent_reel_directory = { workspace = true, optional = true }
agent_reel_identity = { workspace = true }
agent_reel_identity_github = { workspace = true, optional = true }
agent_reel_p2p = { workspace = true, optional = true }
agent_reel_p2p_browser = { workspace = true, optional = true }
agent_reel_p2p_proto = { workspace = true, optional = true }
agent_reel_redaction = { workspace = true }
agent_reel_reel = { workspace = true }
agent_reel_security = { workspace = true }
agent_reel_store = { workspace = true }
agent_reel_story = { workspace = true }
agent_reel_summarize = { workspace = true }
agent_reel_views = { workspace = true }
agent_reel_auth_github = { workspace = true, optional = true }
agent_reel_browser = { workspace = true, optional = true }
agent_reel_edge = { workspace = true, optional = true }

[features]
default = ["local"]
local = []
p2p = ["dep:agent_reel_p2p", "dep:agent_reel_p2p_proto", "dep:agent_reel_directory"]
p2p-browser = ["p2p", "dep:agent_reel_browser", "dep:agent_reel_p2p_browser"]
github = ["dep:agent_reel_identity_github"]
auth-github = ["github", "dep:agent_reel_auth_github"]
edge = ["p2p", "github", "dep:agent_reel_edge"]
aws-deploy = []

[lints]
workspace = true
