[package]
name = "agent_reel_adapters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent_reel_core = { workspace = true }
agent_reel_ingest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known"] }

[lints]
workspace = true
