[package]
name = "agent_reel_auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
